# noordzij_cube

./: .gitignore  README.md  cube.html  index.html  pyproject.toml  train_vae.py
analysis/: extract_letters.py
dataset/: extract_noordzij_full.py  prepare_dataset.sh  split_dataset.py  visualize_split.py
model/: __init__.py  dataset.py  vae.py
train/: __init__.py  monitor.py  trainer.py
